--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,8 @@
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
+                        <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign
+                            Out</button>
                     </li>
 
                 </ul>
@@ -49,9 +50,8 @@
             </form>
 
             <h2>Log Food</h2>
-            <form id="foodForm"">
-                <input type="text" id="foodName" placeholder="Food Name" required />
-                <input type="number" id="foodCalories" placeholder="Calories" min="0" required />
+            <form id="foodForm">
+                <input type="text" id="foodName" placeholder="Food Name (e.g., Banana)" required />
                 <button type="button" onclick="logFood()">Log Food</button>
             </form>
         </div>
@@ -73,83 +73,97 @@
     </div>
 
     <!-- Food Details Modal -->
-<div class="modal fade" id="foodDetailsModal" tabindex="-1" aria-labelledby="foodDetailsModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="foodDetailsModalLabel">Food Details</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal fade" id="foodDetailsModal" tabindex="-1" aria-labelledby="foodDetailsModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="foodDetailsModalLabel">Food Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Food Deatails like calories, fat, protein, and carbs-->
+                    <div class="mb-3">
+                        <h6><b>Food Name:</b></h6>
+                        <p id="modalFoodName"></p>
+                    </div>
+                    <div class="mb-3">
+                        <h6><b>Calories:</b></h6>
+                        <p id="modalFoodCalories"></p>
+                    </div>
+                    <div class="mb-3">
+                        <h6><b>Percentage of Daily Target:</b></h6>
+                        <p id="modalFoodPercentage"></p>
+                    </div>
+                    <div class="mb-3">
+                        <h6><b>Fat:</b></h6>
+                        <p id="modalFoodFat"></p>
+                    </div>
+                    <div class="mb-3">
+                        <h6><b>Protein:</b></h6>
+                        <p id="modalFoodProtein"></p>
+                    </div>
+                    <div class="mb-3">
+                        <h6><b>Carbohydrates:</b></h6>
+                        <p id="modalFoodCarbs"></p>
+                    </div>
+
+                    <!-- Recipe Fields -->
+                    <hr />
+                    <h6><b>Add Recipe (Optional)</b></h6>
+                    <div class="mb-3">
+                        <label for="recipeTitle" class="form-label">Recipe Title</label>
+                        <input type="text" id="recipeTitle" class="form-control" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipeIngredients" class="form-label">Ingredients</label>
+                        <textarea id="recipeIngredients" class="form-control" rows="3"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipeInstructions" class="form-label">Instructions</label>
+                        <textarea id="recipeInstructions" class="form-control" rows="3"></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success" id="saveRecipeButton">Save Recipe</button>
+                    <button type="button" class="btn btn-primary" id="modalEditButton">Edit</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <div class="mb-3">
-            <h6><b>Food Name:</b></h6>
-            <p id="modalFoodName"></p>
-          </div>
-          <div class="mb-3">
-            <h6><b>Calories:</b></h6>
-            <p id="modalFoodCalories"></p>
-          </div>
-          <div class="mb-3">
-            <h6><b>Percentage of Daily Target:</b></h6>
-            <p id="modalFoodPercentage"></p>
-          </div>
-  
-          <!-- Recipe Fields -->
-          <hr />
-          <h6><b>Add Recipe (Optional)</b></h6>
-          <div class="mb-3">
-            <label for="recipeTitle" class="form-label">Recipe Title</label>
-            <input type="text" id="recipeTitle" class="form-control" />
-          </div>
-          <div class="mb-3">
-            <label for="recipeIngredients" class="form-label">Ingredients</label>
-            <textarea id="recipeIngredients" class="form-control" rows="3"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="recipeInstructions" class="form-label">Instructions</label>
-            <textarea id="recipeInstructions" class="form-control" rows="3"></textarea>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-success" id="saveRecipeButton">Save Recipe</button>
-          <button type="button" class="btn btn-primary" id="modalEditButton">Edit</button>
-        </div>
-      </div>
     </div>
-  </div>  
-    <script> 
-    // check if token exists before allowing user access
+    <script>
+        // check if token exists before allowing user access
         if (!localStorage.getItem("token")) {
             window.location.href = "/login"; // Force back to login if no token
         }
 
-    //sets current calorie target in input if exists
+        //sets current calorie target in input if exists
         document.addEventListener('DOMContentLoaded', async () => {
-        const token = localStorage.getItem("token");
-        if (!token) {
-            window.location.href = "/login"; // Redirect to login if no token
-            return;
-        }
-
-        try {
-            const response = await fetch('/calories', {
-                headers: {
-                    'Authorization': 'Bearer ' + token
-                }
-            });
-
-            if (response.ok) {
-                const data = await response.json();
-                if (data.target && data.target > 0) {
-                    document.getElementById('calorieTarget').value = data.target;
-                }
-            } else {
-                console.error('Failed to fetch calorie data:', response.statusText);
+            const token = localStorage.getItem("token");
+            if (!token) {
+                window.location.href = "/login"; // Redirect to login if no token
+                return;
             }
-        } catch (error) {
-            console.error("Error fetching calorie data:", error);
-        }
-    });
+
+            try {
+                const response = await fetch('/calories', {
+                    headers: {
+                        'Authorization': 'Bearer ' + token
+                    }
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    if (data.target && data.target > 0) {
+                        document.getElementById('calorieTarget').value = data.target;
+                    }
+                } else {
+                    console.error('Failed to fetch calorie data:', response.statusText);
+                }
+            } catch (error) {
+                console.error("Error fetching calorie data:", error);
+            }
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
