--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goals</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -28,8 +29,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
+                    <li class="nav-item d-none" id="adminNavItem">
+                        <a class="nav-link" href="/admin">Admin</a>
+                    </li>    
                     <li class="nav-item">
-                        <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign
+                        <button onclick="logout()" class="btn btn-outline-danger btn-sm" id="logoutButton">Sign
                             Out</button>
                     </li>
                 </ul>
