--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Calorie Tracker - Recipes</title>
+
+  <link rel="stylesheet" href="/static/navbar.css">
   <link rel="stylesheet" href="/static/styles.css" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
@@ -19,11 +18,20 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="/goals">Goals</a></li>
-          <li class="nav-item"><a class="nav-link active" href="/recipes">Recipes</a></li>
-          <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
           <li class="nav-item">
-            <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2">Sign Out</button>
+            <a class="nav-link" href="/goals">Goals</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/recipes">Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item d-none" id="adminNavItem">
+            <a class="nav-link" href="/admin">Admin</a>
+          </li>    
+          <li class="nav-item">
+            <button onclick="logout()" class="btn btn-outline-danger btn-sm">Sign Out</button>
           </li>
         </ul>
       </div>
@@ -38,7 +46,8 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
+  <script src="static/main.js"></script>
+  
   <script>
     async function loadRecipes() {
       const response = await fetch("http://localhost:8000/recipes/");
