--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -2,42 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calorie Tracker</title>
-    <link rel="stylesheet" href="/static/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calorie Tracker</title>
+  <link rel="stylesheet" href="/static/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
-        <div class="container-fluid justify-content-between">
-          <a class="navbar-brand" href="/">NutriTrack</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/goals">Goals</a>              
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/recipes">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-              </li>
-              <li class="nav-item">
-                <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
-            </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
+    <div class="container-fluid justify-content-between">
+      <a class="navbar-brand" href="/">NutriTrack</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/goals">Goals</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/recipes">Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <button onclick="logout()" class="btn btn-outline-danger btn-sm ms-2" id="logoutButton">Sign Out</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      <h1>Profile Page</h1>
-      <script src="static/main.js"></script>
-    </body>
-    </html>
+  <h1>Profile Page</h1>
+  <div class="container mt-4" style="max-width: 500px;">
+    <div class="card p-4 shadow-sm">
+      <h3 class="text-center mb-4">User Profile</h3>
+      <p><strong>Username:</strong> <span id="profileUsername">Loading...</span></p>
+      <p><strong>Daily Calorie Target:</strong> <span id="profileTarget">Loading...</span></p>
+      <p><strong>Total Foods Logged:</strong> <span id="profileLogCount">Loading...</span></p>
+      <hr>
+      <form id="profileForm">
+        <div class="mb-3">
+          <label for="weight" class="form-label">Weight (lbs)</label>
+          <input type="number" step="0.1" id="weight" class="form-control" placeholder="e.g. 150" />
+        </div>
+        <div class="mb-3">
+          <label for="height" class="form-label">Height (inches)</label>
+          <input type="number" step="0.1" id="height" class="form-control" placeholder="e.g. 70" />
+        </div>
+
+        <div class="mb-3">
+          <label><strong>BMI:</strong></label>
+          <span id="bmiValue">N/A</span>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Update Profile</button>
+      </form>
+    </div>
+  </div>
+
+
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      const token = localStorage.getItem("token");
+      if (!token) {
+        window.location.href = "/login";
+        return;
+      }
+
+      const res = await fetch("/profile-data", {
+        headers: { "Authorization": "Bearer " + token }
+      });
+
+      const data = await res.json();
+      document.getElementById("profileUsername").textContent = data.username;
+      document.getElementById("profileTarget").textContent = data.target || "Not Set";
+      document.getElementById("profileLogCount").textContent = data.logCount;
+
+      // Convert back from metric to imperial for display
+      document.getElementById("weight").value = data.weight ? (data.weight / 0.453592).toFixed(1) : '';
+      document.getElementById("height").value = data.height ? (data.height / 0.0254).toFixed(1) : '';
+      document.getElementById("bmiValue").textContent = data.bmi !== null ? data.bmi : 'N/A';
+
+      document.getElementById("profileForm").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const weightLbs = parseFloat(document.getElementById("weight").value);
+        const heightInches = parseFloat(document.getElementById("height").value);
+
+        // Convert to metric before sending to backend
+        const weightKg = weightLbs * 0.453592;
+        const heightMeters = heightInches * 0.0254;
+
+        const resp = await fetch("/profile-data", {
+          method: "POST",
+          headers: {
+            "Authorization": "Bearer " + token,
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ weight: weightKg, height: heightMeters })
+        });
+
+        if (resp.ok) {
+          alert("Profile updated!");
+          window.location.reload();
+        } else {
+          alert("Failed to update profile.");
+        }
+      });
+    });
+  </script>
+
+
+
+  <script src="static/main.js"></script>
+</body>
+
+</html>
