--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -69,53 +69,10 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="static/main.js"></script>
-  
-  <script>
-    async function loadRecipes() {
-      const response = await fetch("http://localhost:8000/recipes/");
-      const recipes = await response.json();
+  <script src="/static/main.js"></script>
+  <script>console.log("Inline JS works");</script>
 
-      const container = document.getElementById("recipesContainer");
-      container.innerHTML = "";
-
-      if (recipes.length === 0) {
-        container.innerHTML = `<p class="text-center w-100">No recipes found.</p>`;
-        return;
-      }
-
-      recipes.forEach(recipe => {
-        const col = document.createElement("div");
-        col.className = "col";
-
-        const card = `
-          <div class="card h-100 shadow-sm border border-1 rounded-4" style="background-color: #fdfdfd;">
-            <div class="card-body d-flex flex-column p-4">
-              <h5 class="card-title mb-3 text-dark fw-semibold">${recipe.title}</h5>
-              <div class="mb-3 overflow-auto" style="max-height: 130px;">
-                <strong class="text-muted">Ingredients:</strong>
-                <p class="mb-0 small" style="white-space: pre-wrap;">${recipe.ingredients}</p>
-              </div>
-              <div class="overflow-auto" style="max-height: 130px;">
-                <strong class="text-muted">Instructions:</strong>
-                <p class="mb-0 small" style="white-space: pre-wrap;">${recipe.instructions}</p>
-              </div>
-            </div>
-          </div>
-        `;
-
-        col.innerHTML = card;
-        container.appendChild(col);
-      });
-    }
-
-    function logout() {
-      localStorage.removeItem("token");
-      window.location.href = "/login";
-    }
-
-    window.addEventListener("DOMContentLoaded", loadRecipes);
-  </script>
+    
 </body>
 
 </html>
