--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -9,21 +9,55 @@
   <link rel="stylesheet" href="/static/styles.css" />
   <link rel="stylesheet" href="/static/navbar.css" />
   <style>
-    /* Override styles that might affect the centering */
     body {
-      display: block;
-      align-items: initial;
+      background-color: white;
     }
 
     .recipes-page .container {
-      display: block;
-      width: 100%;
       max-width: 1200px;
-      margin: 0 auto;
+      margin-top: 50px;
     }
 
-    #recipesContainer {
-      margin: 0 auto;
+    .card {
+      height: 100%;
+      border-radius: 1rem;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .card-title {
+      font-size: 1.25rem;
+      font-weight: bold;
+    }
+
+    .card-body {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .ingredients, .instructions {
+      font-size: 0.9rem;
+      white-space: pre-wrap;
+      max-height: 140px;
+      overflow-y: auto;
+    }
+
+    .card-text-label {
+      font-weight: 600;
+      color: #6c757d;
+    }
+
+    h1 {
+      font-weight: bold;
+    }
+
+    .delete-btn {
+      margin-top: 1rem;
     }
   </style>
 </head>
@@ -48,7 +82,7 @@
           </li>
           <li class="nav-item d-none" id="adminNavItem">
             <a class="nav-link" href="/admin">Admin</a>
-          </li>    
+          </li>
           <li class="nav-item">
             <button onclick="logout()" class="btn btn-outline-danger btn-sm">Sign Out</button>
           </li>
@@ -57,22 +91,16 @@
     </div>
   </nav>
 
-  <div class="container py-5">
+  <div class="container">
     <h1 class="text-center mb-4">Your Saved Recipes</h1>
-    <div class="row justify-content-center">
-      <div class="col-12 d-flex justify-content-center">
-        <div id="recipesContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4" style="max-width: 1200px;">
-          <!-- Cards go here -->
-        </div>
-      </div>
+    <div id="recipesContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <!-- Cards will be rendered here by main.js -->
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/static/main.js"></script>
-  <script>console.log("Inline JS works");</script>
-
-    
+  <script src="/static/recipes.js"></script>
 </body>
 
 </html>
