--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -41,8 +41,8 @@
         </div>
     </nav>
 
+    <h1><b>My Nutrition & Fitness Goals</b></h1>
     <div class="container mt-4">
-        <h3 class="text-center mb-4">My Nutrition & Fitness Goals</h3>
         <div id="feedbackAlert" class="alert alert-success d-none" role="alert"></div>
         <div class="row">
             <!-- Left Column - Goal Setting -->
