--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -43,9 +43,9 @@
     </div>
   </nav>
 
+  <h1><b>User Profile</b></h1>
   <div class="container mt-4" style="max-width: 500px;">
     <div class=" p-4 shadow-sm">
-      <h3 class="text-center mb-4">User Profile</h3>
       <p><strong>Username:</strong> <span id="profileUsername">Loading...</span></p>
       <p><strong>Daily Calorie Target:</strong> <span id="profileTarget">Loading...</span></p>
       <p><strong>Total Foods Logged:</strong> <span id="profileLogCount">Loading...</span></p>
