--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -91,8 +91,8 @@
     </div>
   </nav>
 
+  <h1><b>Your Saved Recipes</b></h1>
   <div class="container">
-    <h1 class="text-center mb-4">Your Saved Recipes</h1>
     <div id="recipesContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       <!-- Cards will be rendered here by main.js -->
     </div>
