--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -8,56 +8,303 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/static/styles.css" />
   <link rel="stylesheet" href="/static/navbar.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     body {
-      background-color: white;
+      font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, sans-serif;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #f8f9fa;
+    }
+
+    h1 {
+      color: #2c3e50;
+      margin: 1.5rem 0;
+      width: 100%;
+      text-align: center;
+      font-weight: 700;
+      letter-spacing: -0.5px;
     }
 
     .recipes-page .container {
       max-width: 1200px;
-      margin-top: 50px;
+      padding: 0 20px;
+      margin-bottom: 40px;
+    }
+
+    .page-header {
+      background: linear-gradient(135deg, #4a89dc, #3a6fc7);
+      color: white;
+      padding: 2rem 0;
+      text-align: center;
+      margin-bottom: 2rem;
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+    }
+
+    .page-header h1 {
+      font-weight: 600;
+      font-size: 2rem;
+      margin: 0;
+      color: white;
+      position: relative;
+      z-index: 2;
+    }
+
+    .page-header::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+      z-index: 1;
     }
 
     .card {
       height: 100%;
-      border-radius: 1rem;
-      transition: transform 0.2s ease-in-out;
+      border: none;
+      border-radius: 8px;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
     }
 
     .card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
     }
 
     .card-title {
       font-size: 1.25rem;
-      font-weight: bold;
+      font-weight: 600;
+      color: #343a40;
+      margin-bottom: 0.5rem;
     }
 
     .card-body {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      padding: 1.5rem;
     }
 
-    .ingredients, .instructions {
+    .card-header {
+      border-bottom: none;
+      background-color: rgba(74, 137, 220, 0.1);
+      padding: 1rem 1.5rem;
+    }
+
+    .card-footer {
+      background-color: #fff;
+      padding: 1rem 1.5rem;
+      border-top: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
+    .recipe-info {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 1rem;
+    }
+
+    .recipe-stat {
+      text-align: center;
+      flex: 1;
+      padding: 0.5rem;
+      background-color: #f8f9fa;
+      border-radius: 6px;
+      margin: 0 4px;
+    }
+
+    .recipe-stat:first-child {
+      margin-left: 0;
+    }
+
+    .recipe-stat:last-child {
+      margin-right: 0;
+    }
+
+    .stat-value {
+      font-weight: 600;
+      font-size: 1.1rem;
+      color: #343a40;
+    }
+
+    .stat-label {
+      font-size: 0.75rem;
+      color: #6c757d;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+
+    .ingredients,
+    .instructions {
       font-size: 0.9rem;
       white-space: pre-wrap;
-      max-height: 140px;
+      max-height: 150px;
       overflow-y: auto;
+      padding: 0.75rem;
+      background-color: #f8f9fa;
+      border-radius: 6px;
+      margin-bottom: 1rem;
+      scrollbar-width: thin;
+    }
+
+    .ingredients::-webkit-scrollbar,
+    .instructions::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    .ingredients::-webkit-scrollbar-thumb,
+    .instructions::-webkit-scrollbar-thumb {
+      background-color: #cfd8dc;
+      border-radius: 3px;
     }
 
     .card-text-label {
       font-weight: 600;
-      color: #6c757d;
+      color: #3a6fc7;
+      margin-bottom: 0.5rem;
+      display: flex;
+      align-items: center;
+      font-size: 0.95rem;
     }
 
-    h1 {
-      font-weight: bold;
+    .card-text-label i {
+      margin-right: 0.5rem;
+      width: 20px;
+      text-align: center;
     }
 
     .delete-btn {
-      margin-top: 1rem;
+      background-color: #fff;
+      color: #e74c3c;
+      border: 1px solid #e74c3c;
+      border-radius: 4px;
+      transition: all 0.2s ease;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+    }
+
+    .delete-btn:hover {
+      background-color: #e74c3c;
+      color: #fff;
+      transform: translateY(-2px);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .log-btn {
+      background-color: #3a6fc7;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      transition: all 0.2s ease;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+    }
+
+    .log-btn:hover {
+      background-color: #2c5aa0;
+      transform: translateY(-2px);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .action-btns {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .navbar-brand {
+      color: #09bd1b !important;
+      font-weight: 700 !important;
+      font-size: 1.6rem !important;
+      letter-spacing: -0.5px;
+    }
+
+    .nav-link.active {
+      font-weight: 600;
+      color: #09bd1b !important;
+    }
+
+    #logoutButton {
+      padding: 6px 15px;
+      font-size: 14px;
+    }
+
+    @media (max-width: 767px) {
+      .recipes-page .container {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      .recipe-info {
+        flex-wrap: wrap;
+      }
+
+      .recipe-stat {
+        flex: 1 0 45%;
+        margin-bottom: 8px;
+      }
+    }
+
+    .badge {
+      padding: 0.35em 0.65em;
+      font-weight: 500;
+      border-radius: 20px;
+      font-size: 0.75em;
+    }
+
+    .badge-primary {
+      background-color: #eaf2fd;
+      color: #3a6fc7;
+    }
+
+    .no-recipes {
+      text-align: center;
+      padding: 4rem 2rem;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      margin-top: 2rem;
+    }
+
+    .no-recipes i {
+      font-size: 4rem;
+      color: #e9ecef;
+      margin-bottom: 1.5rem;
+    }
+
+    .no-recipes h3 {
+      font-weight: 600;
+      color: #343a40;
+      margin-bottom: 1rem;
+    }
+
+    .no-recipes p {
+      color: #6c757d;
+      max-width: 500px;
+      margin: 0 auto 1.5rem auto;
+    }
+
+    .add-recipe-btn {
+      background-color: #3a6fc7;
+      color: white;
+      border: none;
+      padding: 0.75rem 2rem;
+      border-radius: 4px;
+      font-weight: 500;
+      transition: all 0.2s;
+    }
+
+    .add-recipe-btn:hover {
+      background-color: #2c5aa0;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -84,7 +331,7 @@
             <a class="nav-link" href="/admin">Admin</a>
           </li>
           <li class="nav-item">
-            <button onclick="logout()" class="btn btn-outline-danger btn-sm">Sign Out</button>
+            <button onclick="logout()" class="btn btn-outline-danger btn-sm" id="logoutButton">Sign Out</button>
           </li>
         </ul>
       </div>
@@ -92,14 +339,37 @@
   </nav>
 
   <h1><b>Your Saved Recipes</b></h1>
+
   <div class="container">
     <div id="recipesContainer" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <!-- Cards will be rendered here by main.js -->
+    </div>
+
+    <div id="noRecipesMessage" class="no-recipes" style="display: none;">
+      <i class="fas fa-utensils"></i>
+      <h3>No Recipes Yet</h3>
+      <p>You haven't saved any recipes yet. Save your favorite meals to easily track your calories and nutrition.</p>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/static/main.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const recipesContainer = document.getElementById('recipesContainer');
+      const noRecipesMessage = document.getElementById('noRecipesMessage');
+
+      const checkForRecipes = setInterval(() => {
+        if (recipesContainer.children.length === 0) {
+          noRecipesMessage.style.display = 'block';
+        } else {
+          noRecipesMessage.style.display = 'none';
+          clearInterval(checkForRecipes);
+        }
+      }, 500);
+
+      setTimeout(() => clearInterval(checkForRecipes), 5000);
+    });
+  </script>
   <script src="/static/recipes.js"></script>
 </body>
 
